# AIM

./: .gitignore  PBS.h  PTNode.cpp  README.md
AIM/local/: bin  include  lib
Controller/: controller.py  generate_arrivals_new.py  model.lp  output_MILP-FCFS.txt  output_MILP.txt  output_PBS-SIPP-IMP.txt  output_PBSSIPP-BESTFIRST.txt  output_PBSSIPP-FCFS.txt  output_PBSSIPP.txt  solution  vehicleArrival.json
Controller/20210715-result-500vph/: AIMILPDelay.txt  AIMILPRunTime.txt  AIMILPThroughput.txt  AIMPBSDelay.txt  AIMPBSRunTime.txt  AIMPBSThroughput.txt  MILP-FCFSDelay.txt  MILP-FCFSRunTime.txt  MILP-FCFSThroughput.txt
Controller/backup/: controller_500vph.py  controller_importance.py  controller_importance_500vph.py  generate_arrivals_new_500vph.py
Controller/backup/20210726-Prioritised/500vph/: AIMPBS-PriorityDelay.txt  AIMPBS-PriorityDelayImportance.txt  AIMPBS-PriorityDelayNormal.txt  AIMPBSDelay.txt  AIMPBSDelayImportance.txt  AIMPBSDelayNormal.txt
Controller/backup/20210726-Prioritised/800vph/: AIMPBS-PriorityDelay.txt  AIMPBS-PriorityDelayImportance.txt  AIMPBS-PriorityDelayNormal.txt  AIMPBSDelay.txt  AIMPBSDelayImportance.txt  AIMPBSDelayNormal.txt
Controller/backup/20210726-RealTime/500vph/: AIMPBSDelay.txt  AIMPBSRunTime.txt  AIMPBSThroughput.txt
Controller/result/: 20220705-PBS-MILP.xlsx  AIMILPDelay.txt  AIMILPRunTime.txt  AIMILPThroughput.txt  AIMPBSDelay.txt  AIMPBSRunTime.txt  AIMPBSThroughput.txt  MILP-FCFSDelay.txt  MILP-FCFSRunTime.txt  MILP-FCFSThroughput.txt
Controller/result-500vph/: AIMILPDelay.txt  AIMILPRunTime.txt  AIMILPThroughput.txt  AIMPBSDelay.txt  AIMPBSRunTime.txt  AIMPBSThroughput.txt  MILP-FCFSDelay.txt  MILP-FCFSRunTime.txt  MILP-FCFSThroughput.txt
Controller/result-800vph/: AIMILPDelay.txt  AIMILPRunTime.txt  AIMILPThroughput.txt  AIMPBSDelay.txt  AIMPBSRunTime.txt  AIMPBSThroughput.txt  MILP-FCFSDelay.txt  MILP-FCFSRunTime.txt  MILP-FCFSThroughput.txt
Controller/result/500vph/: AIMILPRunTime.txt  AIMPBSDelay.txt  AIMPBSThroughput.txt  AIMPBSTravelTime.txt  MILP-FCFSDelay.txt  MILP-FCFSTravelTime.txt
Controller/result/800vph/: AIMPBSRunTime.txt  AIMPBSThroughput.txt  AIMPBSTravelTime.txt  MILP-FCFSRunTime.txt  MILP-FCFSTravelTime.txt
Controller/result1/: AIMILPDelay.txt  AIMILPRunTime.txt  AIMILPThroughput.txt  AIMPBSDelay.txt  AIMPBSRunTime.txt  AIMPBSThroughput.txt
Controller/result2/: AIMILPThroughput.txt  AIMPBSDelay.txt
MILP-FCFS/: AIMILP.cpp  CMakeCache.txt  CMakeLists.txt  Makefile  model.lp  output.txt  pairDistance.py  solution
PBS-SIPP/: AIMPBS  CMakeCache.txt  CMakeLists.txt  Common.h  Driver.cpp  Instance.cpp  Instance.h  Makefile  PBS-BFS.cpp  PBS.cpp  PBS.h  PTNode.cpp  PTNode.h  SIPP.cpp  SIPP.h  cmake_install.cmake  model.lp  output.txt  solution  vehicleArrival.json
PBS-SIPP-BESTFIRST/: Driver.cpp  Instance.cpp  Instance.h  PBS-BFS  PTNode.h
PBS-SIPP-FCFS/: CMakeCache.txt  Driver.cpp  Instance.cpp  Makefile  PBS.cpp  PTNode.cpp  model.lp  output.txt  solution  vehicleArrival.json
PBS-SIPP-IMP/: CMakeCache.txt  Driver.cpp  Instance.cpp  Makefile  PBS.cpp  PBS.h  PTNode.cpp  model.lp  output.txt  solution
PBS-SIPP-IMP2/: CMakeCache.txt  Driver.cpp  Instance.cpp  Makefile  PBS.cpp  PTNode.cpp  PTNode.h  SIPP.cpp  model.lp  output.txt  solution
PBS-SIPP-clean/: CMakeLists.txt  Driver.cpp  Instance.cpp  Instance.h  PBS.cpp  PBS.h  PTNode.cpp  PTNode.h  README.md  SIPP.cpp
PBS-SIPP-ver2/: CMakeCache.txt  Makefile  PBS.cpp  model.lp
PBS-SIPP-ver2-BFS/: CMakeCache.txt  Driver.cpp  Makefile  PBS.cpp  PBS.h  model.lp  output.txt  solution
SUMO/: single_intersection.net.xml
example-code/: README.md  SIPP.cpp  SingleAgentSolver.h  roadmapWithConflicts_swap50.yaml
example-code/SIPP/: ConstraintTable.cpp
old/PBS-SIPP/: CMakeCache.txt  CMakeLists.txt  Instance.cpp  PBS.cpp  PTNode.cpp  ReservationTable.txt  SIPP.cpp  SIPP.h  model.lp  output.txt  solution
old/PBS-SIPP-BESTFIRST/: CMakeCache.txt  Makefile  PBS.cpp  PBS.h  PTNode.cpp  SIPP.cpp  model.lp  output.txt  solution
old/PBS-SIPP-IMP/: CMakeCache.txt  Driver.cpp  Instance.cpp  Makefile  PBS.cpp  PTNode.cpp  model.lp  output.txt  solution  vehicleArrival.json
old/PBS-SIPP-ver2-Priority/: CMakeCache.txt  Makefile  PBS.cpp  output.txt  solution
old/example-code/: CMakeLists.txt  ILPforWMVC.cpp  searchgraph.cpp  searchgraph.h
old/example-code/SIPP/: ConstraintTable.h  ReservationTable.cpp  SIPP.h
src/: AIMILP.cpp  AIMILP_backup.cpp  CMakeCache.txt  CMakeLists.txt  Common.h  ILP.cpp  Instance.cpp  Instance.h  MAPF.cpp  MAPF.h  Makefile  PBS.cpp  PTNode.cpp  SIPP.cpp  animate_graph.py  animation.json  cmake_install.cmake  generate_graph.py  intro_graph.json  intro_graph.yaml  model.lp  output.txt  pairDistance.py  solution  vehicleArrival.json
(+139 files in other folders)
